--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,19 @@
 *.dll
 *.so
 *.dylib
+*.env
+bin/
 
 # Test binary, build with `go test -c`
 *.test
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+*.csv
 
-# Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
-.glide/
+# Vendor packages
+vendor/*
+
+# IDE project folders
+.vscode/
+debug
